# movies_ugc_service

./: .env.example  .env_local  .env_test  .flake8  Makefile  README.md  docker-compose-base.yml  docker-compose-local.yml  docker-compose-mongo-cluster.yml  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  pyproject.toml
.github/requirements/: requirements.txt
.github/workflows/: code-checker.yaml
data/db/ddl/: setup_clickhouse.sql
docker-compose/: api.yml  db.yml  etl.yml  events.yml  full-events.yml  main.yml
docs/: c1_to_be.puml  c2_to_be.puml  с2_to_be.puml
docs/as_is/: c1_as_is.puml  с2_as_is.puml
docs/to_be/: с3_to_be.puml
elk/: docker-compose.yml
elk/logstash/: logstash.conf
logstash/: logstash.conf
nginx/: nginx.conf
nginx/conf.d/: site.conf
research/: README.md
research/clickhouse/: constants.py  run_tests.py
research/olap/clickhouse/: docker-compose.yml  run_tests.py
research/olap/vertica/: run_tests.py
research/regular_db/: README.md  docker-compose.yml
research/regular_db/scripts/: data_loader.py  db_namager.py  generate_data.py  settings.py
research/vertica/: docker-compose.yml  run_tests.py
scripts/: enable-sharding.js  init-configserver.js  init-shard01.js  init-shard02.js  init-shard03.js
src/: app.py  containers.py
src/api/: Dockerfile  run.sh
src/api/v1/: routers.py
src/api/v1/endpoints/: bookmarks.py  film_reviews.py  film_scores.py  review_likes.py  score.py  view_progress.py
src/api/v1/models/: bookmarks.py  film_reviews.py  film_scores.py  paginate.py  responses.py  review_likes.py  scores.py  view_progress.py
src/api/v1/schemas/: film_reviews.py
src/brokers/: base.py  exceptions.py  kafka_consumer.py  kafka_producer.py  models.py
src/common/: db.py  decode_auth_token.py  tracer.py
src/db/: base.py  clickhouse.py  models.py  setup_clickhouse copy.sql
src/db/nodes/node1/: config.xml
src/db/nodes/node2/: config.xml
src/etl/: Dockerfile
src/middleware/: request_id.py
src/repositories/: base.py  user_activity.py
src/services/: base.py  film_scores.py  user_activity_service.py  user_bookmarks.py  user_film_reviews.py  user_review_likes.py  user_view_history.py
src/settings/: __init__.py  app.py  auth.py  database.py  db.py  kafka.py  logger.py  run.sh
tests/: Dockerfile  conftest.py  run.sh
tests/e2e/: playground.py  test_api.py  test_events.py
tests/fake/: services.py
tests/fixtures/: aiohttp.py  api.py  asyncio.py  db.py  events.py  jwt.py  olap.py
tests/src/e2e/: test_events.py  test_scores.py  test_view_progress.py
tests/src/service/: playground.py  test_api.py  test_progress_db.py  test_view_last_progress.py
tests/src/unit/: test_api.py  test_jwt.py  test_progress_db.py  test_save_progress.py  test_view_last_progress.py
tests/src/unit/film_scores/: test_film_scores_api.py
tests/src/unit/view_progress/: test_progress_api.py  test_progress_db.py  test_save_progress.py  test_view_last_progress.py
