[tool.poetry]
name = "movies-ugc-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = "2.6.0"
cryptography = "40.0.2"
fastapi = "0.95.1"
clickhouse-driver = "0.2.6"
confluent-kafka = "2.1.1"
aiokafka = "0.8.0"
gunicorn = "20.1.0"
click = "8.1.3"
orjson = "3.8.12"
python-dotenv = "1.0.0"
clickhouse-connect = "0.5.17"
uvicorn = "0.22.0"
backoff = "2.2.1"
dependency-injector = "4.41.0"
dpath = "2.1.5"
motor = "3.1.2"
vertica-python = "1.3.2"
faker = "18.9.0"
fastapi-pagination = "0.12.4"
sentry-sdk = {extras = ["fastapi"], version = "1.24.0"}
python-logstash = "0.4.8"
opentelemetry-api = "1.18.0"
opentelemetry-sdk = "1.18.0"
opentelemetry-instrumentation-fastapi = "0.39b0"
opentelemetry-exporter-jaeger = "1.18.0"


[tool.poetry.group.dev.dependencies]
# tests
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
aiohttp = "3.8.4"
httpx = "0.24.0"
# linters
black = "23.3.0"
isort = "5.12.0"
flake8 = "6.0.0"
mypy = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    .venv
    | venv
)/
'''

[tool.isort]
line_length = 79
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
skip = [".venv", "venv"]

[tool.mypy]
ignore_missing_imports = true
